# chispaclips-skill

./: .env.example  .gitignore  LICENSE  README.md  SKILL.md  chispaclips.py  pyproject.toml  requirements.txt
chispaclips/: __init__.py  __main__.py  cli.py  config.py  dialectos.py
chispaclips/llm/: __init__.py  base.py  claude.py  factory.py  gemini.py  openai_compat.py
chispaclips/pipeline/: __init__.py  analyze.py  extract.py  hook.py  learn.py  list_processed.py  mark_processed.py  pick.py  preview.py  publish.py  reflect.py  state.py  transcribe.py
chispaclips/prompts/: __init__.py  analisis_es.py  aprendizaje_es.py  reflexion_es.py
chispaclips/transcriber/: __init__.py  base.py  factory.py  groq.py  whisper_local.py
chispaclips/utils/: __init__.py  ffmpeg.py  http.py  logging.py
